--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "socket.io": "^4.7.2"
