--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "prettier": "^2.1.2",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "tailwindcss": "^3.3.5"
   }
 }
